<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_primary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".WelcomePageActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="106dp"
        android:layout_height="109dp"

        android:layout_marginTop="20dp"

        android:background="@mipmap/stocks"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="@dimen/Title"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"

        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/register"
            android:layout_width="131dp"
            android:layout_height="66dp"

            android:background="#04ea00"
            android:onClick="register"
            android:text="@string/register"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/login"
            android:layout_width="118dp"
            android:layout_height="66dp"

            android:background="#04ea00"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>